--- a/index.html
+++ b/index.html
@@ -109,23 +109,23 @@
         <!-- 每个网址的展示框 -->
                 <div class="bookmark">
                     <h3>青花瓷</h3>
-                    <p>全网免费影视资源在线观看，无广告，超流畅，极推荐！</p>
-                    <a href="www.qhcys.com">点这里-去看看</a>
+                    <p>全网免费影视资源在线观看，无广告，超流畅，极推荐！-qhcys.com</p>
+                    <a href="https://www.dz42fg0.com/">点这里-去看看</a>
                 </div>
         		<div class="bookmark">
         		    <h3>音范丝</h3>
         		    <p>4k/蓝光原盘 国内外影视资源下载。</p>
-        		    <a href="www.yinfans.me/">点这里-去看看</a>
+        		    <a href="https://www.yinfans.me/">点这里-去看看</a>
         		</div>
         		<div class="bookmark">
         		    <h3>BV剧院</h3>
-        		    <p>全网免费影视资源在线观看</p>
-        		    <a href="www.jieys.com">点这里-去看看</a>
+        		    <p>全网免费影视资源在线观看-bvjy.com</p>
+        		    <a href="https://www.5abm5xghu.com/">点这里-去看看</a>
         		</div>
         		<div class="bookmark">
         		    <h3>界影视</h3>
-        		    <p>全网免费影视资源在线观看</p>
-        		    <a href="www.bvjy.com">点这里-去看看</a>
+        		    <p>全网免费影视资源在线观看-jieys.com</p>
+        		    <a href="https://www.64j6vujf5.com/">点这里-去看看</a>
         		</div>
         		<div class="bookmark">
         		    <h3>libvio</h3>
