--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     </div>
 
     <footer>
-        <p>© © 20241121PM Kevin的个人网址收藏. 未经许可，禁止转载.</p>
+        <p>© 20241121PM Kevin的个人网址收藏. 未经许可，禁止转载.</p>
     </footer>
 
     <script>
