--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <!-- 每个网址的展示框 -->
                 <div class="bookmark">
                     <h3>青花瓷</h3>
-                    <p>全网免费影视资源在线观看，无广告，超流畅，极推荐！-qhcys.com</p>
+                    <p>全网免费影视资源在线观看，无广告，超流畅，极推荐！（qhcys.com-网址打不开时可尝试输入网址）</p>
                     <a href="https://www.dz42fg0.com/">点这里-去看看</a>
                 </div>
         		<div class="bookmark">
@@ -119,12 +119,12 @@
         		</div>
         		<div class="bookmark">
         		    <h3>BV剧院</h3>
-        		    <p>全网免费影视资源在线观看-bvjy.com</p>
+        		    <p>全网免费影视资源在线观看（bvjy.com-网址打不开时可尝试输入网址）</p>
         		    <a href="https://www.5abm5xghu.com/">点这里-去看看</a>
         		</div>
         		<div class="bookmark">
         		    <h3>界影视</h3>
-        		    <p>全网免费影视资源在线观看-jieys.com</p>
+        		    <p>全网免费影视资源在线观看（jieys.com-网址打不开时可尝试输入网址）</p>
         		    <a href="https://www.64j6vujf5.com/">点这里-去看看</a>
         		</div>
         		<div class="bookmark">
