--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
 <body>
 
     <h1>音视频网站资源</h1>
+    <h4 style="text-align: center;font-size: 15px;color: #666;font-weight: 400;">当显示不安全时，怕就退出，不怕就点继续访问<br>当显示网页打不开时请看简介里有备用网址，浏览器输入尝试</h4>
 
     <div id="search-container">
         <input type="text" id="search-input" placeholder="搜索收藏的网址..." onkeyup="searchBookmarks()">
