--- a/index.html
+++ b/index.html
@@ -471,6 +471,23 @@
 			    description: "一个专门看熊猫直播的频道。",
 			    tags: ["全部", "#熊猫", "#直播"]
 			},
+                        // 网址数据 卡片
+                       {
+                            title: "搜剧",
+                            link: "https://s.tianail.cn/?ref=huamao.vip",
+                            description: "一个在线影视网站",
+                            tags: ["全部", "#在线影视", "#视频"]
+                       },
+
+                       // 网址数据 卡片
+                      {
+                            title: "八号影视",
+                            link: "www.bahaotv.com",
+                            description: "一个在线影视网站",
+                            tags: ["全部", "#在线影视", "#视频"]
+                      },
+
+		
 			
         ];
 		// 以上网址数据，模拟收藏的网址（你可以根据需求自行修改或扩展）
