--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8"> <!-- 设置字符编码为 UTF-8，支持中文字符 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- 确保页面在移动设备上适配 -->
-    <title>Kevinludashi的网址收藏</title> <!-- 网页标题 -->
+    <title>Kevinludashi的影视资源库</title> <!-- 网页标题 -->
     <link rel="stylesheet" href="styles.css"> <!-- 引入外部样式表 -->
     <style>
         /* 页面基本样式 */
